@@ -4,3 +4,4 @@
 [#214] Improve fetch() method to optionally fetch all the atoms
 [#241] Fix tests
 [#213] Add TraverseEngine to API documentation
+[#114] New atoms are being persisted in remote server
